force-app/main/default/objects/Asset/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <label>ActivityType</label>
    <length>6</length>
    <type>Text</type>
</CustomField>