force-app/main/default/objects/Asset/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <label>App</label>
    <length>30</length>
    <type>Text</type>
</CustomField>