force-app/main/default/objects/Asset/fields/AssetClass__c.field-meta.xml
<CustomField>
    <fullName>AssetClass__c</fullName>
    <description>The Asset Class from SAP (This field was created for NPL MA).</description>
    <label>AssetClass</label>
    <length>6</length>
    <type>Text</type>
</CustomField>