force-app/main/default/objects/Asset/fields/AssetDescription__c.field-meta.xml
<CustomField>
    <fullName>AssetDescription__c</fullName>
    <label>AssetDescription</label>
    <length>20</length>
    <type>Text</type>
</CustomField>