force-app/main/default/objects/Asset/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <label>CompanyCode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>