force-app/main/default/objects/Asset/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Center</label>
    <referenceTo>Cost_Center__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>