force-app/main/default/objects/Asset/fields/CurrencyKey__c.field-meta.xml
<CustomField>
    <fullName>CurrencyKey__c</fullName>
    <label>CurrencyKey</label>
    <length>5</length>
    <type>Text</type>
</CustomField>