force-app/main/default/objects/Asset/fields/CustRefDate__c.field-meta.xml
<CustomField>
    <fullName>CustRefDate__c</fullName>
    <label>CustRefDate</label>
    <type>DateTime</type>
</CustomField>