force-app/main/default/objects/Asset/fields/Date_Installed__c.field-meta.xml
<CustomField>
    <fullName>Date_Installed__c</fullName>
    <label>Date Installed</label>
    <type>Date</type>
</CustomField>