force-app/main/default/objects/Asset/fields/DeleteFlag__c.field-meta.xml
<CustomField>
    <fullName>DeleteFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeleteFlag</label>
    <type>Checkbox</type>
</CustomField>