force-app/main/default/objects/Asset/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <label>DocumentNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>