force-app/main/default/objects/Asset/fields/Equipment_Name_Asset__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Name_Asset__c</fullName>
    <formula>AssetDescription__c&amp;&apos;-&apos;&amp;SUBSTITUTE(SUBSTITUTE( TRIM( SUBSTITUTE( Name &amp; &quot;!&quot; , &quot;0&quot;, &quot; &quot;)), &quot; &quot;, &quot;0&quot;), &quot;!&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Name Asset</label>
    <type>Text</type>
</CustomField>