force-app/main/default/objects/Asset/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsDefault flag will be used to determine if the asset is being in default equipment</description>
    <label>IsDefault</label>
    <type>Checkbox</type>
</CustomField>