force-app/main/default/objects/Asset/fields/LineItem__c.field-meta.xml
<CustomField>
    <fullName>LineItem__c</fullName>
    <label>LineItem</label>
    <length>3</length>
    <type>Text</type>
</CustomField>