force-app/main/default/objects/Asset/fields/NPLMA_SAP_Equipment_Id__c.field-meta.xml
<CustomField>
    <fullName>NPLMA_SAP_Equipment_Id__c</fullName>
    <externalId>true</externalId>
    <label>NPLMA SAP Equipment Id</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>