force-app/main/default/objects/Asset/fields/PostingDate__c.field-meta.xml
<CustomField>
    <fullName>PostingDate__c</fullName>
    <label>PostingDate</label>
    <type>DateTime</type>
</CustomField>