force-app/main/default/objects/Asset/fields/PostingHours__c.field-meta.xml
<CustomField>
    <fullName>PostingHours__c</fullName>
    <label>PostingHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>