force-app/main/default/objects/Asset/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>ProcessType</label>
    <length>3</length>
    <type>Text</type>
</CustomField>