force-app/main/default/objects/Asset/fields/ProfitCenter__c.field-meta.xml
<CustomField>
    <fullName>ProfitCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profit Center</label>
    <referenceTo>Profit_Center__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>