force-app/main/default/objects/Asset/fields/RentalHours__c.field-meta.xml
<CustomField>
    <fullName>RentalHours__c</fullName>
    <label>RentalHours</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>