force-app/main/default/objects/Asset/fields/RentalRate__c.field-meta.xml
<CustomField>
    <fullName>RentalRate__c</fullName>
    <label>RentalRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>