force-app/main/default/objects/Asset/fields/SequenceNo__c.field-meta.xml
<CustomField>
    <fullName>SequenceNo__c</fullName>
    <label>SequenceNo</label>
    <length>3</length>
    <type>Text</type>
</CustomField>