force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>AssetDescription__c</columns>
    <columns>CompanyCode__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ProfitCenter__c</columns>
    <columns>CostCenter__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>ASSET.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>